xml parser done; add tests for xml parser